--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@tabler/icons-react": "^3.36.0",
     "@tanstack/react-table": "^8.21.3",
     "class-variance-authority": "^0.7.1",
+    "date-fns": "^4.1.0",
     "embla-carousel-autoplay": "^8.6.0",
     "lucide-react": "^0.562.0",
     "next": "16.1.0",
